# Validator-Pro

./: .env.example  .gitignore  .replit  BREVO_SMTP_SETUP.md  DEPLOYMENT_GUIDE.md  ENVIRONMENT_VARIABLES.md  HANDOVER_DOCUMENT.md  PRODUCTION_ENVIRONMENT.md  README_PAYMENT_API.md  SCALING_RECOMMENDATIONS.md  SMTP_CONFIGURATION.md  WEBHOOK_DEPLOYMENT_GUIDE.md  bot.py  caching_system.py  check_payment.py  check_subscription_status.py  config.py  create_pdf_docs.py  database.py  email_validator.db  email_validator.py  file_processor.py  file_server.py  handover_document.html  keyboards.py  main.py  manual_webhook_test.py  migrate_database.py  models.py  monitoring_system.py  payment_api.py  performance_config.py  phone_validator.py  progress_tracker.py  pyproject.toml  rate_limiter.py  replit.md  requirements.txt  subscription_expiry_notifier.py  subscription_manager.py  (+14 more)
.local/state/replit/agent/filesystem/: filesystem_state.json
handlers/: admin.py  dashboard.py  start.py  subscription.py  validation.py
services/: blockbee_service.py  blockbee_signature.py
